--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.19",
     "@midudev/tailwind-animations": "^0.0.7",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -23,6 +24,7 @@
     "framer-motion": "^11.0.25",
     "geist": "^1.2.2",
     "gsap": "^3.12.5",
+    "mercadopago": "^2.0.8",
     "mongoose": "^8.3.0",
     "next": "13.5.6",
     "react": "^18",
