--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-drag-drop-files": "^2.3.10",
+    "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.2",
     "react-magic-motion": "^1.1.2",
     "tailwind-merge": "^2.2.2",
